// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`DataFilters clear 1`] = `
.c1 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  flex: 0 0 auto;
}

.c3 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  height: 100%;
}

.c4 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  flex: 1 1;
  overflow: auto;
}

.c5 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  margin-bottom: 12px;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c6 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  border-bottom: solid 1px rgba(0, 0, 0, 0.33);
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  padding: 12px;
}

.c7 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c9 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  margin-right: 12px;
  align-items: center;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  justify-content: center;
}

.c12 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-items: center;
  border: solid 2px #7D4CDB;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  height: 24px;
  width: 24px;
  justify-content: center;
  border-radius: 4px;
}

.c15 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-items: center;
  border: solid 2px rgba(0, 0, 0, 0.15);
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  height: 24px;
  width: 24px;
  justify-content: center;
  border-radius: 4px;
}

.c16 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  margin-top: 24px;
  align-items: center;
  min-width: 0;
  min-height: 0;
  flex-direction: row;
  flex: 0 0 auto;
  justify-content: space-between;
}

.c14 {
  flex: 0 0 auto;
  align-self: stretch;
  height: 12px;
}

.c17 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  font: inherit;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  border: 2px solid #7D4CDB;
  border-radius: 18px;
  color: #444444;
  padding: 4px 22px;
  font-size: 18px;
  line-height: 24px;
  background-color: #7D4CDB;
  color: #f8f8f8;
  border-radius: 18px;
  transition-property: color,background-color,border-color,box-shadow;
  transition-duration: 0.1s;
  transition-timing-function: ease-in-out;
}

.c17:hover {
  box-shadow: 0px 0px 0px 2px #7D4CDB;
}

.c17:focus {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c17:focus >circle,
.c17:focus >ellipse,
.c17:focus >line,
.c17:focus >path,
.c17:focus >polygon,
.c17:focus >polyline,
.c17:focus >rect {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c17:focus ::-moz-focus-inner {
  border: 0;
}

.c17:focus:not(:focus-visible) {
  outline: none;
  box-shadow: none;
}

.c17:focus:not(:focus-visible) >circle,
.c17:focus:not(:focus-visible) >ellipse,
.c17:focus:not(:focus-visible) >line,
.c17:focus:not(:focus-visible) >path,
.c17:focus:not(:focus-visible) >polygon,
.c17:focus:not(:focus-visible) >polyline,
.c17:focus:not(:focus-visible) >rect {
  outline: none;
  box-shadow: none;
}

.c17:focus:not(:focus-visible) ::-moz-focus-inner {
  border: 0;
}

.c2 {
  max-width: 100%;
}

.c13 {
  box-sizing: border-box;
  stroke-width: 4px;
  stroke: #7D4CDB;
  width: 24px;
  height: 24px;
}

.c8 {
  display: flex;
  flex-direction: row;
  align-items: center;
  user-select: none;
  -webkit-user-select: none;
  width: fit-content;
  cursor: pointer;
}

.c8:hover input:not([disabled])+div,
.c8:hover input:not([disabled])+span {
  border-color: #000000;
}

.c11 {
  opacity: 0;
  -moz-appearance: none;
  width: 0;
  height: 0;
  margin: 0;
  cursor: pointer;
}

.c11:checked+span>span {
  left: calc( 48px - 24px );
  background: #7D4CDB;
}

.c10 {
  flex-shrink: 0;
}

.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

@media only screen and (max-width: 768px) {
  .c5 {
    margin-bottom: 6px;
  }
}

@media only screen and (max-width: 768px) {
  .c6 {
    border-bottom: solid 1px rgba(0, 0, 0, 0.33);
  }
}

@media only screen and (max-width: 768px) {
  .c6 {
    padding: 6px;
  }
}

@media only screen and (max-width: 768px) {
  .c9 {
    margin-right: 6px;
  }
}

@media only screen and (max-width: 768px) {
  .c12 {
    border: solid 2px #7D4CDB;
  }
}

@media only screen and (max-width: 768px) {
  .c15 {
    border: solid 2px rgba(0, 0, 0, 0.15);
  }
}

@media only screen and (max-width: 768px) {
  .c16 {
    margin-top: 12px;
  }
}

@media only screen and (max-width: 768px) {
  .c14 {
    height: 6px;
  }
}

<div
  class="c0"
>
  <div
    class="c1"
    id="data"
  >
    <form
      class="c2"
    >
      <div
        class="c3"
      >
        <div
          class="c4"
        >
          <div
            class="c1"
          >
            <div
              class="c5 "
            >
              <label
                class="textRecipe_size_medium"
                for="data-name"
                id="grommet-data-name__label"
                style="margin: 6px 12px 6px 12px;"
              >
                name
              </label>
              <div
                class="c6 "
              >
                <div
                  aria-labelledby="grommet-data-name__label"
                  class="c7 StyledCheckBoxGroup-sc-2nhc5d-0"
                  id="data-name"
                  role="group"
                >
                  <label
                    class="c8"
                  >
                    <div
                      class="c9 c10"
                    >
                      <input
                        checked=""
                        class="c11"
                        type="checkbox"
                      />
                      <div
                        class="c12 "
                      >
                        <svg
                          class="c13"
                          preserveAspectRatio="xMidYMid meet"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M6,11.3 L10.3,16 L18,6.2"
                            fill="none"
                          />
                        </svg>
                      </div>
                    </div>
                    <span>
                      a
                    </span>
                  </label>
                  <div
                    class="c14"
                  />
                  <label
                    class="c8"
                  >
                    <div
                      class="c9 c10"
                    >
                      <input
                        class="c11"
                        type="checkbox"
                      />
                      <div
                        class="c15 "
                      />
                    </div>
                    <span>
                      b
                    </span>
                  </label>
                </div>
              </div>
            </div>
          </div>
        </div>
        <footer
          class="c16"
        >
          <button
            class="c17"
            type="submit"
          >
            Apply filters
          </button>
        </footer>
      </div>
    </form>
  </div>
</div>
`;

exports[`DataFilters drop 1`] = `
.c1 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  flex: 0 0 auto;
}

.c2 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: row;
  flex: 0 0 auto;
}

.c4 {
  display: inline-block;
  flex: 0 0 auto;
  width: 24px;
  height: 24px;
  fill: #666666;
  stroke: #666666;
}

.c4 g {
  fill: inherit;
  stroke: inherit;
}

.c4 *:not([stroke])[fill='none'] {
  stroke-width: 0;
}

.c4 *[stroke*='#'],
.c4 *[STROKE*='#'] {
  stroke: inherit;
  fill: none;
}

.c4 *[fill-rule],
.c4 *[FILL-RULE],
.c4 *[fill*='#'],
.c4 *[FILL*='#'] {
  fill: inherit;
  stroke: none;
}

.c3 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  font: inherit;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  color: inherit;
  outline: none;
  border: none;
  padding: 0;
  text-align: inherit;
  line-height: 0;
  padding: 12px;
}

.c3:focus {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c3:focus >circle,
.c3:focus >ellipse,
.c3:focus >line,
.c3:focus >path,
.c3:focus >polygon,
.c3:focus >polyline,
.c3:focus >rect {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c3:focus ::-moz-focus-inner {
  border: 0;
}

.c3:focus:not(:focus-visible) {
  outline: none;
  box-shadow: none;
}

.c3:focus:not(:focus-visible) >circle,
.c3:focus:not(:focus-visible) >ellipse,
.c3:focus:not(:focus-visible) >line,
.c3:focus:not(:focus-visible) >path,
.c3:focus:not(:focus-visible) >polygon,
.c3:focus:not(:focus-visible) >polyline,
.c3:focus:not(:focus-visible) >rect {
  outline: none;
  box-shadow: none;
}

.c3:focus:not(:focus-visible) ::-moz-focus-inner {
  border: 0;
}

.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

<div
  class="c0"
>
  <div
    class="c1"
    id="test-data"
  >
    <div
      class="c2"
    >
      <button
        aria-label="Open filters"
        class="c3"
        id="test-data--filters-control"
        type="button"
      >
        <svg
          aria-label="Filter"
          class="c4"
          viewBox="0 0 24 24"
        >
          <path
            d="m3 6 7 7v8h4v-8l7-7V3H3z"
            fill="none"
            stroke="#000"
            stroke-width="2"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;

exports[`DataFilters drop 2`] = `
<button
  aria-label="Open filters"
  class="StyledButton-sc-323bzc-0 emHfGN"
  data-g-tabindex="none"
  id="test-data--filters-control"
  tabindex="-1"
  type="button"
>
  <svg
    aria-label="Filter"
    class="StyledIcon-sc-ofa7kd-0 fmAnVC"
    viewBox="0 0 24 24"
  >
    <path
      d="m3 6 7 7v8h4v-8l7-7V3H3z"
      fill="none"
      stroke="#000"
      stroke-width="2"
    />
  </svg>
</button>
`;

exports[`DataFilters drop 3`] = `
"@media only screen and (max-width: 768px) {
  .cavIHi {
    margin-bottom: 6px;
  }
}
@media only screen and (max-width: 768px) {
  .jlUwqJ {
    border-bottom: solid 1px rgba(0, 0, 0, 0.33);
  }
}
@media only screen and (max-width: 768px) {
  .jlUwqJ {
    padding: 6px;
  }
}
@media only screen and (max-width: 768px) {
  .ktRvhu {
    margin-right: 6px;
  }
}
@media only screen and (max-width: 768px) {
  .hSCSzp {
    border: solid 2px rgba(0, 0, 0, 0.15);
  }
}
@media only screen and (max-width: 768px) {
  .dwoePz {
    margin-top: 12px;
  }
}
@media only screen and (max-width: 768px) {
  .eEiScb {
    height: 6px;
  }
}"
`;

exports[`DataFilters drop badge 1`] = `
.c1 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  flex: 0 0 auto;
}

.c2 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: row;
  flex: 0 0 auto;
}

.c8 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-items: center;
  background-color: #7D4CDB;
  color: #f8f8f8;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  flex: 0 0 auto;
  justify-content: center;
  border-radius: 24px;
}

.c9 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  margin-inline-start: 12px;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  flex: 0 0 auto;
}

.c6 {
  display: inline-block;
  flex: 0 0 auto;
  width: 24px;
  height: 24px;
  fill: #666666;
  stroke: #666666;
}

.c6 g {
  fill: inherit;
  stroke: inherit;
}

.c6 *:not([stroke])[fill='none'] {
  stroke-width: 0;
}

.c6 *[stroke*='#'],
.c6 *[STROKE*='#'] {
  stroke: inherit;
  fill: none;
}

.c6 *[fill-rule],
.c6 *[FILL-RULE],
.c6 *[fill*='#'],
.c6 *[FILL*='#'] {
  fill: inherit;
  stroke: none;
}

.c4 {
  position: relative;
}

.c5 {
  position: relative;
  display: block;
}

.c7 {
  position: absolute;
  top: 0;
  right: 0;
}

.c3 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  font: inherit;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  color: inherit;
  outline: none;
  border: none;
  padding: 0;
  text-align: inherit;
  line-height: 0;
  padding: 12px;
}

.c3:focus {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c3:focus >circle,
.c3:focus >ellipse,
.c3:focus >line,
.c3:focus >path,
.c3:focus >polygon,
.c3:focus >polyline,
.c3:focus >rect {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c3:focus ::-moz-focus-inner {
  border: 0;
}

.c3:focus:not(:focus-visible) {
  outline: none;
  box-shadow: none;
}

.c3:focus:not(:focus-visible) >circle,
.c3:focus:not(:focus-visible) >ellipse,
.c3:focus:not(:focus-visible) >line,
.c3:focus:not(:focus-visible) >path,
.c3:focus:not(:focus-visible) >polygon,
.c3:focus:not(:focus-visible) >polyline,
.c3:focus:not(:focus-visible) >rect {
  outline: none;
  box-shadow: none;
}

.c3:focus:not(:focus-visible) ::-moz-focus-inner {
  border: 0;
}

.c10 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  font: inherit;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  border: 2px solid #7D4CDB;
  border-radius: 18px;
  color: #444444;
  padding: 4px 22px;
  font-size: 18px;
  line-height: 24px;
  transition-property: color,background-color,border-color,box-shadow;
  transition-duration: 0.1s;
  transition-timing-function: ease-in-out;
}

.c10:hover {
  box-shadow: 0px 0px 0px 2px #7D4CDB;
}

.c10:focus {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c10:focus >circle,
.c10:focus >ellipse,
.c10:focus >line,
.c10:focus >path,
.c10:focus >polygon,
.c10:focus >polyline,
.c10:focus >rect {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c10:focus ::-moz-focus-inner {
  border: 0;
}

.c10:focus:not(:focus-visible) {
  outline: none;
  box-shadow: none;
}

.c10:focus:not(:focus-visible) >circle,
.c10:focus:not(:focus-visible) >ellipse,
.c10:focus:not(:focus-visible) >line,
.c10:focus:not(:focus-visible) >path,
.c10:focus:not(:focus-visible) >polygon,
.c10:focus:not(:focus-visible) >polyline,
.c10:focus:not(:focus-visible) >rect {
  outline: none;
  box-shadow: none;
}

.c10:focus:not(:focus-visible) ::-moz-focus-inner {
  border: 0;
}

.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

@media only screen and (max-width: 768px) {
  .c8 {
    border-radius: 12px;
  }
}

@media only screen and (max-width: 768px) {
  .c9 {
    margin-inline-start: 6px;
  }
}

<div
  class="c0"
>
  <div
    class="c1"
    id="data"
  >
    <div
      class="c2"
    >
      <button
        aria-label="Open filters, 1 filter applied"
        class="c3"
        id="data--filters-control"
        type="button"
      >
        <div
          class="c4"
        >
          <div
            class="c5"
          >
            <svg
              aria-label="Filter"
              class="c6"
              viewBox="0 0 24 24"
            >
              <path
                d="m3 6 7 7v8h4v-8l7-7V3H3z"
                fill="none"
                stroke="#000"
                stroke-width="2"
              />
            </svg>
          </div>
          <div
            class="c7"
            style="top: 0px; right: 0px; transform: translate(50%, -50%); transform-origin: 100% 0%;"
          >
            <div
              class="c8 Badge__StyledBadgeContainer-sc-1es4ws1-0"
              style="min-height: 24px; min-width: 24px;"
            >
              <span
                class="textRecipe_size_small"
                style="color: rgb(0, 0, 0); font-weight: normal;"
              >
                1
              </span>
            </div>
          </div>
        </div>
      </button>
      <div
        class="c9"
      >
        <button
          class="c10"
          type="button"
        >
          Clear filters
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`DataFilters layer 1`] = `
.c1 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  flex: 0 0 auto;
}

.c2 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: row;
  flex: 0 0 auto;
}

.c4 {
  display: inline-block;
  flex: 0 0 auto;
  width: 24px;
  height: 24px;
  fill: #666666;
  stroke: #666666;
}

.c4 g {
  fill: inherit;
  stroke: inherit;
}

.c4 *:not([stroke])[fill='none'] {
  stroke-width: 0;
}

.c4 *[stroke*='#'],
.c4 *[STROKE*='#'] {
  stroke: inherit;
  fill: none;
}

.c4 *[fill-rule],
.c4 *[FILL-RULE],
.c4 *[fill*='#'],
.c4 *[FILL*='#'] {
  fill: inherit;
  stroke: none;
}

.c3 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  font: inherit;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  color: inherit;
  outline: none;
  border: none;
  padding: 0;
  text-align: inherit;
  line-height: 0;
  padding: 12px;
}

.c3:focus {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c3:focus >circle,
.c3:focus >ellipse,
.c3:focus >line,
.c3:focus >path,
.c3:focus >polygon,
.c3:focus >polyline,
.c3:focus >rect {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c3:focus ::-moz-focus-inner {
  border: 0;
}

.c3:focus:not(:focus-visible) {
  outline: none;
  box-shadow: none;
}

.c3:focus:not(:focus-visible) >circle,
.c3:focus:not(:focus-visible) >ellipse,
.c3:focus:not(:focus-visible) >line,
.c3:focus:not(:focus-visible) >path,
.c3:focus:not(:focus-visible) >polygon,
.c3:focus:not(:focus-visible) >polyline,
.c3:focus:not(:focus-visible) >rect {
  outline: none;
  box-shadow: none;
}

.c3:focus:not(:focus-visible) ::-moz-focus-inner {
  border: 0;
}

.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

<div
  class="c0"
>
  <div
    class="c1"
    id="test-data"
  >
    <div
      class="c2"
    >
      <button
        aria-label="Open filters"
        class="c3"
        id="test-data--filters-control"
        type="button"
      >
        <svg
          aria-label="Filter"
          class="c4"
          viewBox="0 0 24 24"
        >
          <path
            d="m3 6 7 7v8h4v-8l7-7V3H3z"
            fill="none"
            stroke="#000"
            stroke-width="2"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;

exports[`DataFilters layer 2`] = `
.c8 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  flex: 0 0 auto;
}

.c4 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  min-width: 384px;
}

.c6 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  height: 100%;
}

.c7 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  flex: 1 1;
  padding-left: 24px;
  padding-right: 24px;
  padding-top: 24px;
  overflow: auto;
}

.c9 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-items: center;
  min-width: 0;
  min-height: 0;
  flex-direction: row;
  flex: 0 0 auto;
  justify-content: space-between;
}

.c14 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  margin-bottom: 12px;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c15 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  border-bottom: solid 1px rgba(0, 0, 0, 0.33);
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  padding: 12px;
}

.c16 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c18 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  margin-right: 12px;
  align-items: center;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  justify-content: center;
}

.c21 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-items: center;
  border: solid 2px rgba(0, 0, 0, 0.15);
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  height: 24px;
  width: 24px;
  justify-content: center;
  border-radius: 4px;
}

.c23 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  margin-top: 24px;
  align-items: center;
  min-width: 0;
  min-height: 0;
  flex-direction: row;
  flex: 0 0 auto;
  justify-content: space-between;
  padding-left: 24px;
  padding-right: 24px;
  padding-bottom: 24px;
}

.c11 {
  flex: 0 0 auto;
  align-self: stretch;
  width: 24px;
}

.c22 {
  flex: 0 0 auto;
  align-self: stretch;
  height: 12px;
}

.c13 {
  display: inline-block;
  flex: 0 0 auto;
  width: 24px;
  height: 24px;
  fill: #666666;
  stroke: #666666;
}

.c13 g {
  fill: inherit;
  stroke: inherit;
}

.c13 *:not([stroke])[fill='none'] {
  stroke-width: 0;
}

.c13 *[stroke*='#'],
.c13 *[STROKE*='#'] {
  stroke: inherit;
  fill: none;
}

.c13 *[fill-rule],
.c13 *[FILL-RULE],
.c13 *[fill*='#'],
.c13 *[FILL*='#'] {
  fill: inherit;
  stroke: none;
}

.c12 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  font: inherit;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  color: inherit;
  outline: none;
  border: none;
  padding: 0;
  text-align: inherit;
  line-height: 0;
  padding: 12px;
}

.c12:focus {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c12:focus >circle,
.c12:focus >ellipse,
.c12:focus >line,
.c12:focus >path,
.c12:focus >polygon,
.c12:focus >polyline,
.c12:focus >rect {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c12:focus ::-moz-focus-inner {
  border: 0;
}

.c12:focus:not(:focus-visible) {
  outline: none;
  box-shadow: none;
}

.c12:focus:not(:focus-visible) >circle,
.c12:focus:not(:focus-visible) >ellipse,
.c12:focus:not(:focus-visible) >line,
.c12:focus:not(:focus-visible) >path,
.c12:focus:not(:focus-visible) >polygon,
.c12:focus:not(:focus-visible) >polyline,
.c12:focus:not(:focus-visible) >rect {
  outline: none;
  box-shadow: none;
}

.c12:focus:not(:focus-visible) ::-moz-focus-inner {
  border: 0;
}

.c24 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  font: inherit;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  border: 2px solid #7D4CDB;
  border-radius: 18px;
  color: #444444;
  padding: 4px 22px;
  font-size: 18px;
  line-height: 24px;
  background-color: #7D4CDB;
  color: #f8f8f8;
  border-radius: 18px;
  transition-property: color,background-color,border-color,box-shadow;
  transition-duration: 0.1s;
  transition-timing-function: ease-in-out;
}

.c24:hover {
  box-shadow: 0px 0px 0px 2px #7D4CDB;
}

.c24:focus {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c24:focus >circle,
.c24:focus >ellipse,
.c24:focus >line,
.c24:focus >path,
.c24:focus >polygon,
.c24:focus >polyline,
.c24:focus >rect {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c24:focus ::-moz-focus-inner {
  border: 0;
}

.c24:focus:not(:focus-visible) {
  outline: none;
  box-shadow: none;
}

.c24:focus:not(:focus-visible) >circle,
.c24:focus:not(:focus-visible) >ellipse,
.c24:focus:not(:focus-visible) >line,
.c24:focus:not(:focus-visible) >path,
.c24:focus:not(:focus-visible) >polygon,
.c24:focus:not(:focus-visible) >polyline,
.c24:focus:not(:focus-visible) >rect {
  outline: none;
  box-shadow: none;
}

.c24:focus:not(:focus-visible) ::-moz-focus-inner {
  border: 0;
}

.c5 {
  max-width: 100%;
  max-height: 100%;
}

.c17 {
  display: flex;
  flex-direction: row;
  align-items: center;
  user-select: none;
  -webkit-user-select: none;
  width: fit-content;
  cursor: pointer;
}

.c17:hover input:not([disabled])+div,
.c17:hover input:not([disabled])+span {
  border-color: #000000;
}

.c20 {
  opacity: 0;
  -moz-appearance: none;
  width: 0;
  height: 0;
  margin: 0;
  cursor: pointer;
}

.c20:checked+span>span {
  left: calc( 48px - 24px );
  background: #7D4CDB;
}

.c19 {
  flex-shrink: 0;
}

.c10 {
  margin: 0px;
  font-size: 34px;
  line-height: 40px;
  max-width: 816px;
  font-weight: 600;
  overflow-wrap: break-word;
}

.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  background: transparent;
  position: relative;
  z-index: 20;
  pointer-events: none;
  outline: none;
  position: fixed;
  top: 0px;
  left: 0px;
  right: 0px;
  bottom: 0px;
}

.c1 {
  position: absolute;
  top: 0px;
  left: 0px;
  right: 0px;
  bottom: 0px;
  background-color: rgba(0, 0, 0, 0.5);
  color: #f8f8f8;
  pointer-events: all;
  will-change: transform;
}

.c2 {
  display: flex;
  flex-direction: column;
  min-height: 48px;
  background-color: #FFFFFF;
  color: #444444;
  outline: none;
  pointer-events: all;
  z-index: 20;
  position: absolute;
  max-height: calc(100% - 0px - 0px);
  max-width: calc(100% - 0px - 0px);
  border-radius: 0;
  top: 0px;
  bottom: 0px;
  right: 0px;
  transform: translateX(0);
  animation: bKtuJK 0.2s ease-in-out forwards;
}

.c3 {
  width: 0;
  height: 0;
  overflow: hidden;
  position: absolute;
  clip-path: inset(50%);
  white-space: nowrap;
  border: 0;
}

.c3:focus {
  outline: none;
}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {
  .c7 {
    padding-left: 12px;
    padding-right: 12px;
  }
}

@media only screen and (max-width: 768px) {
  .c7 {
    padding-top: 12px;
  }
}

@media only screen and (max-width: 768px) {
  .c14 {
    margin-bottom: 6px;
  }
}

@media only screen and (max-width: 768px) {
  .c15 {
    border-bottom: solid 1px rgba(0, 0, 0, 0.33);
  }
}

@media only screen and (max-width: 768px) {
  .c15 {
    padding: 6px;
  }
}

@media only screen and (max-width: 768px) {
  .c18 {
    margin-right: 6px;
  }
}

@media only screen and (max-width: 768px) {
  .c21 {
    border: solid 2px rgba(0, 0, 0, 0.15);
  }
}

@media only screen and (max-width: 768px) {
  .c23 {
    margin-top: 12px;
  }
}

@media only screen and (max-width: 768px) {
  .c23 {
    padding-left: 12px;
    padding-right: 12px;
  }
}

@media only screen and (max-width: 768px) {
  .c23 {
    padding-bottom: 12px;
  }
}

@media only screen and (max-width: 768px) {
  .c11 {
    width: 12px;
  }
}

@media only screen and (max-width: 768px) {
  .c22 {
    height: 6px;
  }
}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {

}

@media only screen and (max-width: 768px) {
  .c10 {
    margin: 0px;
  }
}

@media only screen and (max-width: 768px) {
  .c10 {
    font-size: 26px;
    line-height: 32px;
    max-width: 624px;
  }
}

@media only screen and (max-width: 768px) {
  .c0 {
    position: fixed;
    width: 100%;
    height: 100%;
    min-height: 100vh;
  }
}

@media only screen and (max-width: 768px) {
  .c1 {
    position: relative;
  }
}

@media only screen and (max-width: 768px) {
  .c2 {
    position: relative;
    max-height: none;
    max-width: none;
    border-radius: 0;
    height: 100vh;
    width: 100vw;
  }
}

<div
  class="c0"
  id="test-data--filters-layer"
  tabindex="-1"
>
  <div
    class="c1"
  />
  <div
    class="c2"
    data-g-portal-id="0"
    id="test-data--filters-layer"
  >
    <span
      class="c3"
      tabindex="-1"
    />
    <div
      class="c4"
    >
      <form
        class="c5"
        fill="vertical"
      >
        <div
          class="c6"
        >
          <div
            class="c7"
          >
            <div
              class="c8"
            >
              <header
                class="c9"
              >
                <h2
                  class="c10"
                >
                  Filters
                </h2>
                <div
                  class="c11"
                />
                <button
                  class="c12"
                  type="button"
                >
                  <svg
                    aria-label="Close"
                    class="c13"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="m3 3 18 18M3 21 21 3"
                      fill="none"
                      stroke="#000"
                      stroke-width="2"
                    />
                  </svg>
                </button>
              </header>
              <div
                class="c14 "
              >
                <label
                  class="textRecipe_size_medium"
                  for="test-data-name"
                  id="grommet-test-data-name__label"
                  style="margin: 6px 12px 6px 12px;"
                >
                  name
                </label>
                <div
                  class="c15 "
                >
                  <div
                    aria-labelledby="grommet-test-data-name__label"
                    class="c16 StyledCheckBoxGroup-sc-2nhc5d-0"
                    id="test-data-name"
                    role="group"
                  >
                    <label
                      class="c17"
                    >
                      <div
                        class="c18 c19"
                      >
                        <input
                          class="c20"
                          type="checkbox"
                        />
                        <div
                          class="c21 "
                        />
                      </div>
                      <span>
                        a
                      </span>
                    </label>
                    <div
                      class="c22"
                    />
                    <label
                      class="c17"
                    >
                      <div
                        class="c18 c19"
                      >
                        <input
                          class="c20"
                          type="checkbox"
                        />
                        <div
                          class="c21 "
                        />
                      </div>
                      <span>
                        b
                      </span>
                    </label>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <footer
            class="c23"
          >
            <button
              class="c24"
              type="submit"
            >
              Apply filters
            </button>
          </footer>
        </div>
      </form>
    </div>
  </div>
</div>
`;

exports[`DataFilters layer 3`] = `
"@media only screen and (max-width: 768px) {
  .cavIHi {
    margin-bottom: 6px;
  }
}
@media only screen and (max-width: 768px) {
  .jlUwqJ {
    border-bottom: solid 1px rgba(0, 0, 0, 0.33);
  }
}
@media only screen and (max-width: 768px) {
  .jlUwqJ {
    padding: 6px;
  }
}
@media only screen and (max-width: 768px) {
  .ktRvhu {
    margin-right: 6px;
  }
}
@media only screen and (max-width: 768px) {
  .hSCSzp {
    border: solid 2px rgba(0, 0, 0, 0.15);
  }
}
@media only screen and (max-width: 768px) {
  .dwoePz {
    margin-top: 12px;
  }
}
@media only screen and (max-width: 768px) {
  .eEiScb {
    height: 6px;
  }
}"
`;

exports[`DataFilters properties array 1`] = `
.c1 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  flex: 0 0 auto;
}

.c3 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  height: 100%;
}

.c4 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  flex: 1 1;
  overflow: auto;
}

.c5 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  margin-bottom: 12px;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c6 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  border-bottom: solid 1px rgba(0, 0, 0, 0.33);
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  padding: 12px;
}

.c7 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c9 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  margin-right: 12px;
  align-items: center;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  justify-content: center;
}

.c12 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-items: center;
  border: solid 2px rgba(0, 0, 0, 0.15);
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  height: 24px;
  width: 24px;
  justify-content: center;
  border-radius: 4px;
}

.c14 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  margin-top: 24px;
  align-items: center;
  min-width: 0;
  min-height: 0;
  flex-direction: row;
  flex: 0 0 auto;
  justify-content: space-between;
}

.c13 {
  flex: 0 0 auto;
  align-self: stretch;
  height: 12px;
}

.c15 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  font: inherit;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  border: 2px solid #7D4CDB;
  border-radius: 18px;
  color: #444444;
  padding: 4px 22px;
  font-size: 18px;
  line-height: 24px;
  background-color: #7D4CDB;
  color: #f8f8f8;
  border-radius: 18px;
  transition-property: color,background-color,border-color,box-shadow;
  transition-duration: 0.1s;
  transition-timing-function: ease-in-out;
}

.c15:hover {
  box-shadow: 0px 0px 0px 2px #7D4CDB;
}

.c15:focus {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c15:focus >circle,
.c15:focus >ellipse,
.c15:focus >line,
.c15:focus >path,
.c15:focus >polygon,
.c15:focus >polyline,
.c15:focus >rect {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c15:focus ::-moz-focus-inner {
  border: 0;
}

.c15:focus:not(:focus-visible) {
  outline: none;
  box-shadow: none;
}

.c15:focus:not(:focus-visible) >circle,
.c15:focus:not(:focus-visible) >ellipse,
.c15:focus:not(:focus-visible) >line,
.c15:focus:not(:focus-visible) >path,
.c15:focus:not(:focus-visible) >polygon,
.c15:focus:not(:focus-visible) >polyline,
.c15:focus:not(:focus-visible) >rect {
  outline: none;
  box-shadow: none;
}

.c15:focus:not(:focus-visible) ::-moz-focus-inner {
  border: 0;
}

.c2 {
  max-width: 100%;
}

.c8 {
  display: flex;
  flex-direction: row;
  align-items: center;
  user-select: none;
  -webkit-user-select: none;
  width: fit-content;
  cursor: pointer;
}

.c8:hover input:not([disabled])+div,
.c8:hover input:not([disabled])+span {
  border-color: #000000;
}

.c11 {
  opacity: 0;
  -moz-appearance: none;
  width: 0;
  height: 0;
  margin: 0;
  cursor: pointer;
}

.c11:checked+span>span {
  left: calc( 48px - 24px );
  background: #7D4CDB;
}

.c10 {
  flex-shrink: 0;
}

.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

@media only screen and (max-width: 768px) {
  .c5 {
    margin-bottom: 6px;
  }
}

@media only screen and (max-width: 768px) {
  .c6 {
    border-bottom: solid 1px rgba(0, 0, 0, 0.33);
  }
}

@media only screen and (max-width: 768px) {
  .c6 {
    padding: 6px;
  }
}

@media only screen and (max-width: 768px) {
  .c9 {
    margin-right: 6px;
  }
}

@media only screen and (max-width: 768px) {
  .c12 {
    border: solid 2px rgba(0, 0, 0, 0.15);
  }
}

@media only screen and (max-width: 768px) {
  .c14 {
    margin-top: 12px;
  }
}

@media only screen and (max-width: 768px) {
  .c13 {
    height: 6px;
  }
}

<div
  class="c0"
>
  <div
    class="c1"
    id="data"
  >
    <form
      class="c2"
    >
      <div
        class="c3"
      >
        <div
          class="c4"
        >
          <div
            class="c1"
          >
            <div
              class="c5 "
            >
              <label
                class="textRecipe_size_medium"
                for="data-name"
                id="grommet-data-name__label"
                style="margin: 6px 12px 6px 12px;"
              >
                name
              </label>
              <div
                class="c6 "
              >
                <div
                  aria-labelledby="grommet-data-name__label"
                  class="c7 StyledCheckBoxGroup-sc-2nhc5d-0"
                  id="data-name"
                  role="group"
                >
                  <label
                    class="c8"
                  >
                    <div
                      class="c9 c10"
                    >
                      <input
                        class="c11"
                        type="checkbox"
                      />
                      <div
                        class="c12 "
                      />
                    </div>
                    <span>
                      a
                    </span>
                  </label>
                  <div
                    class="c13"
                  />
                  <label
                    class="c8"
                  >
                    <div
                      class="c9 c10"
                    >
                      <input
                        class="c11"
                        type="checkbox"
                      />
                      <div
                        class="c12 "
                      />
                    </div>
                    <span>
                      b
                    </span>
                  </label>
                </div>
              </div>
            </div>
          </div>
        </div>
        <footer
          class="c14"
        >
          <button
            class="c15"
            type="submit"
          >
            Apply filters
          </button>
        </footer>
      </div>
    </form>
  </div>
</div>
`;

exports[`DataFilters properties object 1`] = `
.c1 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  flex: 0 0 auto;
}

.c3 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  height: 100%;
}

.c4 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  flex: 1 1;
  overflow: auto;
}

.c5 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  margin-bottom: 12px;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c6 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  border-bottom: solid 1px rgba(0, 0, 0, 0.33);
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  padding: 12px;
}

.c7 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c9 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  margin-right: 12px;
  align-items: center;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  justify-content: center;
}

.c12 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-items: center;
  border: solid 2px rgba(0, 0, 0, 0.15);
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  height: 24px;
  width: 24px;
  justify-content: center;
  border-radius: 4px;
}

.c14 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  margin-top: 24px;
  align-items: center;
  min-width: 0;
  min-height: 0;
  flex-direction: row;
  flex: 0 0 auto;
  justify-content: space-between;
}

.c13 {
  flex: 0 0 auto;
  align-self: stretch;
  height: 12px;
}

.c15 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  font: inherit;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  border: 2px solid #7D4CDB;
  border-radius: 18px;
  color: #444444;
  padding: 4px 22px;
  font-size: 18px;
  line-height: 24px;
  background-color: #7D4CDB;
  color: #f8f8f8;
  border-radius: 18px;
  transition-property: color,background-color,border-color,box-shadow;
  transition-duration: 0.1s;
  transition-timing-function: ease-in-out;
}

.c15:hover {
  box-shadow: 0px 0px 0px 2px #7D4CDB;
}

.c15:focus {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c15:focus >circle,
.c15:focus >ellipse,
.c15:focus >line,
.c15:focus >path,
.c15:focus >polygon,
.c15:focus >polyline,
.c15:focus >rect {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c15:focus ::-moz-focus-inner {
  border: 0;
}

.c15:focus:not(:focus-visible) {
  outline: none;
  box-shadow: none;
}

.c15:focus:not(:focus-visible) >circle,
.c15:focus:not(:focus-visible) >ellipse,
.c15:focus:not(:focus-visible) >line,
.c15:focus:not(:focus-visible) >path,
.c15:focus:not(:focus-visible) >polygon,
.c15:focus:not(:focus-visible) >polyline,
.c15:focus:not(:focus-visible) >rect {
  outline: none;
  box-shadow: none;
}

.c15:focus:not(:focus-visible) ::-moz-focus-inner {
  border: 0;
}

.c2 {
  max-width: 100%;
}

.c8 {
  display: flex;
  flex-direction: row;
  align-items: center;
  user-select: none;
  -webkit-user-select: none;
  width: fit-content;
  cursor: pointer;
}

.c8:hover input:not([disabled])+div,
.c8:hover input:not([disabled])+span {
  border-color: #000000;
}

.c11 {
  opacity: 0;
  -moz-appearance: none;
  width: 0;
  height: 0;
  margin: 0;
  cursor: pointer;
}

.c11:checked+span>span {
  left: calc( 48px - 24px );
  background: #7D4CDB;
}

.c10 {
  flex-shrink: 0;
}

.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

@media only screen and (max-width: 768px) {
  .c5 {
    margin-bottom: 6px;
  }
}

@media only screen and (max-width: 768px) {
  .c6 {
    border-bottom: solid 1px rgba(0, 0, 0, 0.33);
  }
}

@media only screen and (max-width: 768px) {
  .c6 {
    padding: 6px;
  }
}

@media only screen and (max-width: 768px) {
  .c9 {
    margin-right: 6px;
  }
}

@media only screen and (max-width: 768px) {
  .c12 {
    border: solid 2px rgba(0, 0, 0, 0.15);
  }
}

@media only screen and (max-width: 768px) {
  .c14 {
    margin-top: 12px;
  }
}

@media only screen and (max-width: 768px) {
  .c13 {
    height: 6px;
  }
}

<div
  class="c0"
>
  <div
    class="c1"
    id="data"
  >
    <form
      class="c2"
    >
      <div
        class="c3"
      >
        <div
          class="c4"
        >
          <div
            class="c1"
          >
            <div
              class="c5 "
            >
              <label
                class="textRecipe_size_medium"
                for="data-name"
                id="grommet-data-name__label"
                style="margin: 6px 12px 6px 12px;"
              >
                name
              </label>
              <div
                class="c6 "
              >
                <div
                  aria-labelledby="grommet-data-name__label"
                  class="c7 StyledCheckBoxGroup-sc-2nhc5d-0"
                  id="data-name"
                  role="group"
                >
                  <label
                    class="c8"
                  >
                    <div
                      class="c9 c10"
                    >
                      <input
                        class="c11"
                        type="checkbox"
                      />
                      <div
                        class="c12 "
                      />
                    </div>
                    <span>
                      a
                    </span>
                  </label>
                  <div
                    class="c13"
                  />
                  <label
                    class="c8"
                  >
                    <div
                      class="c9 c10"
                    >
                      <input
                        class="c11"
                        type="checkbox"
                      />
                      <div
                        class="c12 "
                      />
                    </div>
                    <span>
                      b
                    </span>
                  </label>
                </div>
              </div>
            </div>
          </div>
        </div>
        <footer
          class="c14"
        >
          <button
            class="c15"
            type="submit"
          >
            Apply filters
          </button>
        </footer>
      </div>
    </form>
  </div>
</div>
`;

exports[`DataFilters renders 1`] = `
.c1 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  flex: 0 0 auto;
}

.c3 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  height: 100%;
}

.c4 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  flex: 1 1;
  overflow: auto;
}

.c5 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  margin-bottom: 12px;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c6 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  border-bottom: solid 1px rgba(0, 0, 0, 0.33);
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  padding: 12px;
}

.c7 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c9 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  margin-right: 12px;
  align-items: center;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  justify-content: center;
}

.c12 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-items: center;
  border: solid 2px rgba(0, 0, 0, 0.15);
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  height: 24px;
  width: 24px;
  justify-content: center;
  border-radius: 4px;
}

.c14 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  margin-top: 24px;
  align-items: center;
  min-width: 0;
  min-height: 0;
  flex-direction: row;
  flex: 0 0 auto;
  justify-content: space-between;
}

.c13 {
  flex: 0 0 auto;
  align-self: stretch;
  height: 12px;
}

.c15 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  font: inherit;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  border: 2px solid #7D4CDB;
  border-radius: 18px;
  color: #444444;
  padding: 4px 22px;
  font-size: 18px;
  line-height: 24px;
  background-color: #7D4CDB;
  color: #f8f8f8;
  border-radius: 18px;
  transition-property: color,background-color,border-color,box-shadow;
  transition-duration: 0.1s;
  transition-timing-function: ease-in-out;
}

.c15:hover {
  box-shadow: 0px 0px 0px 2px #7D4CDB;
}

.c15:focus {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c15:focus >circle,
.c15:focus >ellipse,
.c15:focus >line,
.c15:focus >path,
.c15:focus >polygon,
.c15:focus >polyline,
.c15:focus >rect {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c15:focus ::-moz-focus-inner {
  border: 0;
}

.c15:focus:not(:focus-visible) {
  outline: none;
  box-shadow: none;
}

.c15:focus:not(:focus-visible) >circle,
.c15:focus:not(:focus-visible) >ellipse,
.c15:focus:not(:focus-visible) >line,
.c15:focus:not(:focus-visible) >path,
.c15:focus:not(:focus-visible) >polygon,
.c15:focus:not(:focus-visible) >polyline,
.c15:focus:not(:focus-visible) >rect {
  outline: none;
  box-shadow: none;
}

.c15:focus:not(:focus-visible) ::-moz-focus-inner {
  border: 0;
}

.c2 {
  max-width: 100%;
}

.c8 {
  display: flex;
  flex-direction: row;
  align-items: center;
  user-select: none;
  -webkit-user-select: none;
  width: fit-content;
  cursor: pointer;
}

.c8:hover input:not([disabled])+div,
.c8:hover input:not([disabled])+span {
  border-color: #000000;
}

.c11 {
  opacity: 0;
  -moz-appearance: none;
  width: 0;
  height: 0;
  margin: 0;
  cursor: pointer;
}

.c11:checked+span>span {
  left: calc( 48px - 24px );
  background: #7D4CDB;
}

.c10 {
  flex-shrink: 0;
}

.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

@media only screen and (max-width: 768px) {
  .c5 {
    margin-bottom: 6px;
  }
}

@media only screen and (max-width: 768px) {
  .c6 {
    border-bottom: solid 1px rgba(0, 0, 0, 0.33);
  }
}

@media only screen and (max-width: 768px) {
  .c6 {
    padding: 6px;
  }
}

@media only screen and (max-width: 768px) {
  .c9 {
    margin-right: 6px;
  }
}

@media only screen and (max-width: 768px) {
  .c12 {
    border: solid 2px rgba(0, 0, 0, 0.15);
  }
}

@media only screen and (max-width: 768px) {
  .c14 {
    margin-top: 12px;
  }
}

@media only screen and (max-width: 768px) {
  .c13 {
    height: 6px;
  }
}

<div
  class="c0"
>
  <div
    class="c1"
    id="data"
  >
    <form
      class="c2"
    >
      <div
        class="c3"
      >
        <div
          class="c4"
        >
          <div
            class="c1"
          >
            <div
              class="c5 "
            >
              <label
                class="textRecipe_size_medium"
                for="data-name"
                id="grommet-data-name__label"
                style="margin: 6px 12px 6px 12px;"
              >
                name
              </label>
              <div
                class="c6 "
              >
                <div
                  aria-labelledby="grommet-data-name__label"
                  class="c7 StyledCheckBoxGroup-sc-2nhc5d-0"
                  id="data-name"
                  role="group"
                >
                  <label
                    class="c8"
                  >
                    <div
                      class="c9 c10"
                    >
                      <input
                        class="c11"
                        type="checkbox"
                      />
                      <div
                        class="c12 "
                      />
                    </div>
                    <span>
                      a
                    </span>
                  </label>
                  <div
                    class="c13"
                  />
                  <label
                    class="c8"
                  >
                    <div
                      class="c9 c10"
                    >
                      <input
                        class="c11"
                        type="checkbox"
                      />
                      <div
                        class="c12 "
                      />
                    </div>
                    <span>
                      b
                    </span>
                  </label>
                </div>
              </div>
            </div>
          </div>
        </div>
        <footer
          class="c14"
        >
          <button
            class="c15"
            type="submit"
          >
            Apply filters
          </button>
        </footer>
      </div>
    </form>
  </div>
</div>
`;

exports[`DataFilters should display all filter options regardless of result set 1`] = `
<DocumentFragment>
  .c1 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  flex: 0 0 auto;
}

.c3 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  height: 100%;
}

.c4 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  flex: 1 1;
  overflow: auto;
}

.c5 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  margin-bottom: 12px;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c6 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  border-bottom: solid 1px rgba(0, 0, 0, 0.33);
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  padding: 12px;
}

.c7 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c9 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  margin-right: 12px;
  align-items: center;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  justify-content: center;
}

.c12 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-items: center;
  border: solid 2px rgba(0, 0, 0, 0.15);
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  height: 24px;
  width: 24px;
  justify-content: center;
  border-radius: 4px;
}

.c14 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  margin-top: 24px;
  align-items: center;
  min-width: 0;
  min-height: 0;
  flex-direction: row;
  flex: 0 0 auto;
  justify-content: space-between;
}

.c17 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  border-top: solid 1px rgba(0, 0, 0, 0.33);
  border-bottom: solid 1px rgba(0, 0, 0, 0.33);
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  flex: 0 0 auto;
  padding-left: 24px;
  padding-right: 24px;
  padding-top: 12px;
  padding-bottom: 12px;
}

.c18 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  border-bottom: solid 1px rgba(0, 0, 0, 0.33);
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  flex: 0 0 auto;
  padding-left: 24px;
  padding-right: 24px;
  padding-top: 12px;
  padding-bottom: 12px;
}

.c13 {
  flex: 0 0 auto;
  align-self: stretch;
  height: 12px;
}

.c15 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  font: inherit;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  border: 2px solid #7D4CDB;
  border-radius: 18px;
  color: #444444;
  padding: 4px 22px;
  font-size: 18px;
  line-height: 24px;
  background-color: #7D4CDB;
  color: #f8f8f8;
  border-radius: 18px;
  transition-property: color,background-color,border-color,box-shadow;
  transition-duration: 0.1s;
  transition-timing-function: ease-in-out;
}

.c15:hover {
  box-shadow: 0px 0px 0px 2px #7D4CDB;
}

.c15:focus {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c15:focus >circle,
.c15:focus >ellipse,
.c15:focus >line,
.c15:focus >path,
.c15:focus >polygon,
.c15:focus >polyline,
.c15:focus >rect {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c15:focus ::-moz-focus-inner {
  border: 0;
}

.c15:focus:not(:focus-visible) {
  outline: none;
  box-shadow: none;
}

.c15:focus:not(:focus-visible) >circle,
.c15:focus:not(:focus-visible) >ellipse,
.c15:focus:not(:focus-visible) >line,
.c15:focus:not(:focus-visible) >path,
.c15:focus:not(:focus-visible) >polygon,
.c15:focus:not(:focus-visible) >polyline,
.c15:focus:not(:focus-visible) >rect {
  outline: none;
  box-shadow: none;
}

.c15:focus:not(:focus-visible) ::-moz-focus-inner {
  border: 0;
}

.c2 {
  max-width: 100%;
}

.c8 {
  display: flex;
  flex-direction: row;
  align-items: center;
  user-select: none;
  -webkit-user-select: none;
  width: fit-content;
  cursor: pointer;
}

.c8:hover input:not([disabled])+div,
.c8:hover input:not([disabled])+span {
  border-color: #000000;
}

.c11 {
  opacity: 0;
  -moz-appearance: none;
  width: 0;
  height: 0;
  margin: 0;
  cursor: pointer;
}

.c11:checked+span>span {
  left: calc( 48px - 24px );
  background: #7D4CDB;
}

.c10 {
  flex-shrink: 0;
}

.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c16 {
  list-style: none;
  margin: 0;
  padding: 0;
}

@media only screen and (max-width: 768px) {
  .c5 {
    margin-bottom: 6px;
  }
}

@media only screen and (max-width: 768px) {
  .c6 {
    border-bottom: solid 1px rgba(0, 0, 0, 0.33);
  }
}

@media only screen and (max-width: 768px) {
  .c6 {
    padding: 6px;
  }
}

@media only screen and (max-width: 768px) {
  .c9 {
    margin-right: 6px;
  }
}

@media only screen and (max-width: 768px) {
  .c12 {
    border: solid 2px rgba(0, 0, 0, 0.15);
  }
}

@media only screen and (max-width: 768px) {
  .c14 {
    margin-top: 12px;
  }
}

@media only screen and (max-width: 768px) {
  .c17 {
    border-top: solid 1px rgba(0, 0, 0, 0.33);
    border-bottom: solid 1px rgba(0, 0, 0, 0.33);
  }
}

@media only screen and (max-width: 768px) {
  .c17 {
    padding-left: 12px;
    padding-right: 12px;
  }
}

@media only screen and (max-width: 768px) {
  .c17 {
    padding-top: 6px;
    padding-bottom: 6px;
  }
}

@media only screen and (max-width: 768px) {
  .c18 {
    border-bottom: solid 1px rgba(0, 0, 0, 0.33);
  }
}

@media only screen and (max-width: 768px) {
  .c18 {
    padding-left: 12px;
    padding-right: 12px;
  }
}

@media only screen and (max-width: 768px) {
  .c18 {
    padding-top: 6px;
    padding-bottom: 6px;
  }
}

@media only screen and (max-width: 768px) {
  .c13 {
    height: 6px;
  }
}

<div
    class="c0"
  >
    <div
      class="c1"
      id="data"
    >
      <form
        class="c2"
      >
        <div
          class="c3"
        >
          <div
            class="c4"
          >
            <div
              class="c1"
            >
              <div
                class="c5 "
              >
                <label
                  class="textRecipe_size_medium"
                  for="data-name"
                  id="grommet-data-name__label"
                  style="margin: 6px 12px 6px 12px;"
                >
                  name
                </label>
                <div
                  class="c6 "
                >
                  <div
                    aria-labelledby="grommet-data-name__label"
                    class="c7 StyledCheckBoxGroup-sc-2nhc5d-0"
                    id="data-name"
                    role="group"
                  >
                    <label
                      class="c8"
                    >
                      <div
                        class="c9 c10"
                      >
                        <input
                          class="c11"
                          type="checkbox"
                        />
                        <div
                          class="c12 "
                        />
                      </div>
                      <span>
                        a
                      </span>
                    </label>
                    <div
                      class="c13"
                    />
                    <label
                      class="c8"
                    >
                      <div
                        class="c9 c10"
                      >
                        <input
                          class="c11"
                          type="checkbox"
                        />
                        <div
                          class="c12 "
                        />
                      </div>
                      <span>
                        b
                      </span>
                    </label>
                  </div>
                </div>
              </div>
              <div
                class="c5 "
              >
                <label
                  class="textRecipe_size_medium"
                  for="data-color"
                  id="grommet-data-color__label"
                  style="margin: 6px 12px 6px 12px;"
                >
                  color
                </label>
                <div
                  class="c6 "
                >
                  <div
                    aria-labelledby="grommet-data-color__label"
                    class="c7 StyledCheckBoxGroup-sc-2nhc5d-0"
                    id="data-color"
                    role="group"
                  >
                    <label
                      class="c8"
                    >
                      <div
                        class="c9 c10"
                      >
                        <input
                          class="c11"
                          type="checkbox"
                        />
                        <div
                          class="c12 "
                        />
                      </div>
                      <span>
                        blue
                      </span>
                    </label>
                    <div
                      class="c13"
                    />
                    <label
                      class="c8"
                    >
                      <div
                        class="c9 c10"
                      >
                        <input
                          class="c11"
                          type="checkbox"
                        />
                        <div
                          class="c12 "
                        />
                      </div>
                      <span>
                        red
                      </span>
                    </label>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <footer
            class="c14"
          >
            <button
              class="c15"
              type="submit"
            >
              Apply filters
            </button>
          </footer>
        </div>
      </form>
      <ul
        class="c16"
        role="list"
      >
        <li
          class="c17 "
        >
          a
        </li>
        <li
          class="c18 "
        >
          b
        </li>
      </ul>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DataFilters should not badge when RangeSelector returns to min/max 1`] = `
<DocumentFragment>
  .c1 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  flex: 0 0 auto;
}

.c2 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: row;
  flex: 0 0 auto;
}

.c4 {
  display: inline-block;
  flex: 0 0 auto;
  width: 24px;
  height: 24px;
  fill: #666666;
  stroke: #666666;
}

.c4 g {
  fill: inherit;
  stroke: inherit;
}

.c4 *:not([stroke])[fill='none'] {
  stroke-width: 0;
}

.c4 *[stroke*='#'],
.c4 *[STROKE*='#'] {
  stroke: inherit;
  fill: none;
}

.c4 *[fill-rule],
.c4 *[FILL-RULE],
.c4 *[fill*='#'],
.c4 *[FILL*='#'] {
  fill: inherit;
  stroke: none;
}

.c3 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  font: inherit;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  color: inherit;
  outline: none;
  border: none;
  padding: 0;
  text-align: inherit;
  line-height: 0;
  padding: 12px;
}

.c3:focus {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c3:focus >circle,
.c3:focus >ellipse,
.c3:focus >line,
.c3:focus >path,
.c3:focus >polygon,
.c3:focus >polyline,
.c3:focus >rect {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c3:focus ::-moz-focus-inner {
  border: 0;
}

.c3:focus:not(:focus-visible) {
  outline: none;
  box-shadow: none;
}

.c3:focus:not(:focus-visible) >circle,
.c3:focus:not(:focus-visible) >ellipse,
.c3:focus:not(:focus-visible) >line,
.c3:focus:not(:focus-visible) >path,
.c3:focus:not(:focus-visible) >polygon,
.c3:focus:not(:focus-visible) >polyline,
.c3:focus:not(:focus-visible) >rect {
  outline: none;
  box-shadow: none;
}

.c3:focus:not(:focus-visible) ::-moz-focus-inner {
  border: 0;
}

.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

<div
    class="c0"
  >
    <div
      class="c1"
      id="data"
    >
      <div
        class="c2"
      >
        <button
          aria-label="Open filters"
          class="c3"
          id="data--filters-control"
          type="button"
        >
          <svg
            aria-label="Filter"
            class="c4"
            viewBox="0 0 24 24"
          >
            <path
              d="m3 6 7 7v8h4v-8l7-7V3H3z"
              fill="none"
              stroke="#000"
              stroke-width="2"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DataFilters sub objects 1`] = `
.c1 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  flex: 0 0 auto;
}

.c3 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  height: 100%;
}

.c4 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  flex: 1 1;
  overflow: auto;
}

.c5 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  margin-bottom: 12px;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c6 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  border-bottom: solid 1px rgba(0, 0, 0, 0.33);
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  padding: 12px;
}

.c7 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c9 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  margin-right: 12px;
  align-items: center;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  justify-content: center;
}

.c12 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-items: center;
  border: solid 2px #7D4CDB;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  height: 24px;
  width: 24px;
  justify-content: center;
  border-radius: 4px;
}

.c15 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-items: center;
  border: solid 2px rgba(0, 0, 0, 0.15);
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  height: 24px;
  width: 24px;
  justify-content: center;
  border-radius: 4px;
}

.c16 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-items: center;
  min-width: 0;
  min-height: 0;
  flex-direction: row;
  width: 100%;
  height: 100%;
}

.c17 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-items: center;
  min-width: 0;
  min-height: 0;
  flex-direction: row;
  width: 100%;
  height: 100%;
  cursor: pointer;
}

.c19 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-self: stretch;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  width: 100%;
  border-radius: 12px;
}

.c20 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-self: stretch;
  align-items: center;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  justify-content: center;
  overflow: visible;
}

.c22 {
  display: flex;
  box-sizing: border-box;
  align-items: center;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  flex-basis: 100%;
  height: 100%;
  justify-content: center;
}

.c23 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  background-color: #7D4CDB;
  color: #f8f8f8;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  height: 12px;
  width: 12px;
  border-radius: 100%;
}

.c24 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-self: stretch;
  background-color: rgba(125, 76, 219, 0.4);
  color: #444444;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  width: 100%;
  border-radius: 12px;
}

.c25 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  margin-top: 24px;
  align-items: center;
  min-width: 0;
  min-height: 0;
  flex-direction: row;
  flex: 0 0 auto;
  justify-content: space-between;
}

.c30 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  flex: 1 0 auto;
  justify-content: center;
}

.c14 {
  flex: 0 0 auto;
  align-self: stretch;
  height: 12px;
}

.c26 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  font: inherit;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  border: 2px solid #7D4CDB;
  border-radius: 18px;
  color: #444444;
  padding: 4px 22px;
  font-size: 18px;
  line-height: 24px;
  background-color: #7D4CDB;
  color: #f8f8f8;
  border-radius: 18px;
  transition-property: color,background-color,border-color,box-shadow;
  transition-duration: 0.1s;
  transition-timing-function: ease-in-out;
}

.c26:hover {
  box-shadow: 0px 0px 0px 2px #7D4CDB;
}

.c26:focus {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c26:focus >circle,
.c26:focus >ellipse,
.c26:focus >line,
.c26:focus >path,
.c26:focus >polygon,
.c26:focus >polyline,
.c26:focus >rect {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c26:focus ::-moz-focus-inner {
  border: 0;
}

.c26:focus:not(:focus-visible) {
  outline: none;
  box-shadow: none;
}

.c26:focus:not(:focus-visible) >circle,
.c26:focus:not(:focus-visible) >ellipse,
.c26:focus:not(:focus-visible) >line,
.c26:focus:not(:focus-visible) >path,
.c26:focus:not(:focus-visible) >polygon,
.c26:focus:not(:focus-visible) >polyline,
.c26:focus:not(:focus-visible) >rect {
  outline: none;
  box-shadow: none;
}

.c26:focus:not(:focus-visible) ::-moz-focus-inner {
  border: 0;
}

.c2 {
  max-width: 100%;
}

.c13 {
  box-sizing: border-box;
  stroke-width: 4px;
  stroke: #7D4CDB;
  width: 24px;
  height: 24px;
}

.c8 {
  display: flex;
  flex-direction: row;
  align-items: center;
  user-select: none;
  -webkit-user-select: none;
  width: fit-content;
  cursor: pointer;
}

.c8:hover input:not([disabled])+div,
.c8:hover input:not([disabled])+span {
  border-color: #000000;
}

.c11 {
  opacity: 0;
  -moz-appearance: none;
  width: 0;
  height: 0;
  margin: 0;
  cursor: pointer;
}

.c11:checked+span>span {
  left: calc( 48px - 24px );
  background: #7D4CDB;
}

.c10 {
  flex-shrink: 0;
}

.c21 {
  position: absolute;
  clip: rect(0 0 0 0);
  clip-path: inset(50%);
  height: 1px;
  overflow: hidden;
  white-space: nowrap;
  width: 1px;
}

.c18 {
  user-select: none;
}

.c29 {
  margin: 0;
  padding: 0;
  font-weight: inherit;
  text-align: inherit;
  text-align: start;
  border-bottom: solid 1px rgba(0, 0, 0, 0.33);
  padding-left: 12px;
  padding-right: 12px;
  padding-top: 6px;
  padding-bottom: 6px;
}

.c33 {
  margin: 0;
  padding: 0;
  font-weight: inherit;
  text-align: inherit;
  text-align: start;
  padding-left: 12px;
  padding-right: 12px;
  padding-top: 6px;
  padding-bottom: 6px;
}

.c27 {
  border-spacing: 0;
  border-collapse: collapse;
  width: inherit;
}

.c28 {
  position: relative;
  border-spacing: 0;
  border-collapse: separate;
}

.c32:focus {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c32:focus >circle,
.c32:focus >ellipse,
.c32:focus >line,
.c32:focus >path,
.c32:focus >polygon,
.c32:focus >polyline,
.c32:focus >rect {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c32:focus ::-moz-focus-inner {
  border: 0;
}

.c32:focus:not(:focus-visible) {
  outline: none;
  box-shadow: none;
}

.c32:focus:not(:focus-visible) >circle,
.c32:focus:not(:focus-visible) >ellipse,
.c32:focus:not(:focus-visible) >line,
.c32:focus:not(:focus-visible) >path,
.c32:focus:not(:focus-visible) >polygon,
.c32:focus:not(:focus-visible) >polyline,
.c32:focus:not(:focus-visible) >rect {
  outline: none;
  box-shadow: none;
}

.c32:focus:not(:focus-visible) ::-moz-focus-inner {
  border: 0;
}

.c31:focus {
  outline: 2px solid #6FFFB0;
}

.c31:focus:not(:focus-visible) {
  outline: none;
}

.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

@media only screen and (max-width: 768px) {
  .c5 {
    margin-bottom: 6px;
  }
}

@media only screen and (max-width: 768px) {
  .c6 {
    border-bottom: solid 1px rgba(0, 0, 0, 0.33);
  }
}

@media only screen and (max-width: 768px) {
  .c6 {
    padding: 6px;
  }
}

@media only screen and (max-width: 768px) {
  .c9 {
    margin-right: 6px;
  }
}

@media only screen and (max-width: 768px) {
  .c12 {
    border: solid 2px #7D4CDB;
  }
}

@media only screen and (max-width: 768px) {
  .c15 {
    border: solid 2px rgba(0, 0, 0, 0.15);
  }
}

@media only screen and (max-width: 768px) {
  .c19 {
    border-radius: 6px;
  }
}

@media only screen and (max-width: 768px) {
  .c24 {
    border-radius: 6px;
  }
}

@media only screen and (max-width: 768px) {
  .c25 {
    margin-top: 12px;
  }
}

@media only screen and (max-width: 768px) {
  .c14 {
    height: 6px;
  }
}

<div
  class="c0"
>
  <div
    class="c1"
    id="data"
  >
    <form
      class="c2"
    >
      <div
        class="c3"
      >
        <div
          class="c4"
        >
          <div
            class="c1"
          >
            <div
              class="c5 "
            >
              <label
                class="textRecipe_size_medium"
                for="data-location.city"
                id="grommet-data-location.city__label"
                style="margin: 6px 12px 6px 12px;"
              >
                City
              </label>
              <div
                class="c6 "
              >
                <div
                  aria-labelledby="grommet-data-location.city__label"
                  class="c7 StyledCheckBoxGroup-sc-2nhc5d-0"
                  id="data-location.city"
                  role="group"
                >
                  <label
                    class="c8"
                  >
                    <div
                      class="c9 c10"
                    >
                      <input
                        checked=""
                        class="c11"
                        type="checkbox"
                      />
                      <div
                        class="c12 "
                      >
                        <svg
                          class="c13"
                          preserveAspectRatio="xMidYMid meet"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M6,11.3 L10.3,16 L18,6.2"
                            fill="none"
                          />
                        </svg>
                      </div>
                    </div>
                    <span>
                      Paris
                    </span>
                  </label>
                  <div
                    class="c14"
                  />
                  <label
                    class="c8"
                  >
                    <div
                      class="c9 c10"
                    >
                      <input
                        class="c11"
                        type="checkbox"
                      />
                      <div
                        class="c15 "
                      />
                    </div>
                    <span>
                      Sydney
                    </span>
                  </label>
                </div>
              </div>
            </div>
            <div
              class="c5 "
            >
              <label
                class="textRecipe_size_medium"
                for="data-location.lat"
                id="grommet-data-location.lat__label"
                style="margin: 6px 12px 6px 12px;"
              >
                Latitude
              </label>
              <div
                class="c6 "
              >
                <div
                  class="c16"
                  id="data-location.lat"
                >
                  <span
                    class="textRecipe_size_small"
                    style="text-align: right; margin-left: 12px; margin-right: 12px; width: 0px;"
                  >
                    10
                  </span>
                  <div
                    class="c17 c18"
                    tabindex="-1"
                  >
                    <div
                      class="c19"
                      style="flex: 100 0 0px;"
                    />
                    <div
                      class="c20"
                      style="flex: 0 0 1px;"
                    >
                      <input
                        aria-label="Lower Bounds"
                        aria-valuemax="90"
                        aria-valuemin="-90"
                        aria-valuenow="10"
                        class="c21"
                        max="90"
                        min="-90"
                        readonly=""
                        step="9"
                        type="range"
                        value="10"
                      />
                      <div
                        class="c22"
                        style="cursor: col-resize; outline: none; min-width: 12px; min-height: 12px; z-index: 1;"
                        tabindex="-1"
                      >
                        <div
                          class="c23 EdgeControl__StyledBox-sc-1xo2yt9-1"
                        />
                      </div>
                    </div>
                    <div
                      class="c24"
                      style="flex: 81 0 0px; cursor: ew-resize;"
                    />
                    <div
                      class="c20"
                      style="flex: 0 0 1px;"
                    >
                      <input
                        aria-label="Upper Bounds"
                        aria-valuemax="90"
                        aria-valuemin="-90"
                        aria-valuenow="90"
                        class="c21"
                        max="90"
                        min="-90"
                        readonly=""
                        step="9"
                        type="range"
                        value="90"
                      />
                      <div
                        class="c22"
                        style="cursor: col-resize; outline: none; min-width: 12px; min-height: 12px; z-index: 1;"
                        tabindex="-1"
                      >
                        <div
                          class="c23 EdgeControl__StyledBox-sc-1xo2yt9-1"
                        />
                      </div>
                    </div>
                    <div
                      class="c19"
                      style="flex: 0 0 0px;"
                    />
                  </div>
                  <span
                    class="textRecipe_size_small"
                    style="margin-left: 12px; margin-right: 12px; width: 0px;"
                  >
                    90
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
        <footer
          class="c25"
        >
          <button
            class="c26"
            type="submit"
          >
            Apply filters
          </button>
        </footer>
      </div>
    </form>
    <table
      class="c27 c28"
    >
      <thead
        class="StyledTable__StyledTableHeader-sc-1m3u5g-4 StyledDataTable__StyledDataTableHeader-sc-xrlyjm-5"
      >
        <tr
          class="StyledTable__StyledTableRow-sc-1m3u5g-2 "
        >
          <th
            class="c29 "
            id="grommet-data-table-header-location.city"
            scope="col"
          >
            <div
              class="c30"
            >
              <span
                class="textRecipe_size_medium"
              >
                City
              </span>
            </div>
          </th>
          <th
            class="c29 "
            id="grommet-data-table-header-location.lat"
            scope="col"
          >
            <div
              class="c30"
            >
              <span
                class="textRecipe_size_medium"
              >
                Latitude
              </span>
            </div>
          </th>
        </tr>
      </thead>
      <tbody
        class="StyledTable__StyledTableBody-sc-1m3u5g-3 c31"
      >
        <tr
          class="StyledTable__StyledTableRow-sc-1m3u5g-2 c32"
        >
          <th
            class="c33 "
            scope="row"
          >
            <div
              class="c7"
            >
              <span
                class="textRecipe_size_medium"
                style="font-weight: bold;"
              >
                Paris
              </span>
            </div>
          </th>
          <td
            class="c33 "
          >
            <div
              class="c7"
            >
              <span
                class="textRecipe_size_medium"
              >
                48
              </span>
            </div>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`DataFilters sub objects with rangeSelector 1`] = `
<DocumentFragment>
  .c1 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  flex: 0 0 auto;
}

.c2 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: row;
  flex: 0 0 auto;
}

.c8 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-items: center;
  background-color: #7D4CDB;
  color: #f8f8f8;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  flex: 0 0 auto;
  justify-content: center;
  border-radius: 24px;
}

.c9 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  margin-inline-start: 12px;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  flex: 0 0 auto;
}

.c6 {
  display: inline-block;
  flex: 0 0 auto;
  width: 24px;
  height: 24px;
  fill: #666666;
  stroke: #666666;
}

.c6 g {
  fill: inherit;
  stroke: inherit;
}

.c6 *:not([stroke])[fill='none'] {
  stroke-width: 0;
}

.c6 *[stroke*='#'],
.c6 *[STROKE*='#'] {
  stroke: inherit;
  fill: none;
}

.c6 *[fill-rule],
.c6 *[FILL-RULE],
.c6 *[fill*='#'],
.c6 *[FILL*='#'] {
  fill: inherit;
  stroke: none;
}

.c4 {
  position: relative;
}

.c5 {
  position: relative;
  display: block;
}

.c7 {
  position: absolute;
  top: 0;
  right: 0;
}

.c3 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  font: inherit;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  color: inherit;
  outline: none;
  border: none;
  padding: 0;
  text-align: inherit;
  line-height: 0;
  padding: 12px;
}

.c3:focus {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c3:focus >circle,
.c3:focus >ellipse,
.c3:focus >line,
.c3:focus >path,
.c3:focus >polygon,
.c3:focus >polyline,
.c3:focus >rect {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c3:focus ::-moz-focus-inner {
  border: 0;
}

.c3:focus:not(:focus-visible) {
  outline: none;
  box-shadow: none;
}

.c3:focus:not(:focus-visible) >circle,
.c3:focus:not(:focus-visible) >ellipse,
.c3:focus:not(:focus-visible) >line,
.c3:focus:not(:focus-visible) >path,
.c3:focus:not(:focus-visible) >polygon,
.c3:focus:not(:focus-visible) >polyline,
.c3:focus:not(:focus-visible) >rect {
  outline: none;
  box-shadow: none;
}

.c3:focus:not(:focus-visible) ::-moz-focus-inner {
  border: 0;
}

.c10 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  font: inherit;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  border: 2px solid #7D4CDB;
  border-radius: 18px;
  color: #444444;
  padding: 4px 22px;
  font-size: 18px;
  line-height: 24px;
  transition-property: color,background-color,border-color,box-shadow;
  transition-duration: 0.1s;
  transition-timing-function: ease-in-out;
}

.c10:hover {
  box-shadow: 0px 0px 0px 2px #7D4CDB;
}

.c10:focus {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c10:focus >circle,
.c10:focus >ellipse,
.c10:focus >line,
.c10:focus >path,
.c10:focus >polygon,
.c10:focus >polyline,
.c10:focus >rect {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c10:focus ::-moz-focus-inner {
  border: 0;
}

.c10:focus:not(:focus-visible) {
  outline: none;
  box-shadow: none;
}

.c10:focus:not(:focus-visible) >circle,
.c10:focus:not(:focus-visible) >ellipse,
.c10:focus:not(:focus-visible) >line,
.c10:focus:not(:focus-visible) >path,
.c10:focus:not(:focus-visible) >polygon,
.c10:focus:not(:focus-visible) >polyline,
.c10:focus:not(:focus-visible) >rect {
  outline: none;
  box-shadow: none;
}

.c10:focus:not(:focus-visible) ::-moz-focus-inner {
  border: 0;
}

.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {
  .c8 {
    border-radius: 12px;
  }
}

@media only screen and (max-width: 768px) {
  .c9 {
    margin-inline-start: 6px;
  }
}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

<div
    class="c0"
  >
    <div
      class="c1"
      id="data"
    >
      <div
        class="c2"
      >
        <button
          aria-label="Open filters, 1 filter applied"
          class="c3"
          id="data--filters-control"
          type="button"
        >
          <div
            class="c4"
          >
            <div
              class="c5"
            >
              <svg
                aria-label="Filter"
                class="c6"
                viewBox="0 0 24 24"
              >
                <path
                  d="m3 6 7 7v8h4v-8l7-7V3H3z"
                  fill="none"
                  stroke="#000"
                  stroke-width="2"
                />
              </svg>
            </div>
            <div
              class="c7"
              style="top: 0px; right: 0px; transform: translate(50%, -50%); transform-origin: 100% 0%;"
            >
              <div
                class="c8 Badge__StyledBadgeContainer-sc-1es4ws1-0"
                style="min-height: 24px; min-width: 24px;"
              >
                <span
                  class="textRecipe_size_small"
                  style="color: rgb(0, 0, 0); font-weight: normal;"
                >
                  1
                </span>
              </div>
            </div>
          </div>
        </button>
        <div
          class="c9"
        >
          <button
            class="c10"
            type="button"
          >
            Clear filters
          </button>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DataFilters theme footer actions margin and gap 1`] = `
<DocumentFragment>
  .c1 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  flex: 0 0 auto;
}

.c3 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  height: 100%;
}

.c4 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  flex: 1 1;
  overflow: auto;
}

.c5 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  margin-bottom: 12px;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c6 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  border-bottom: solid 1px rgba(0, 0, 0, 0.33);
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  padding: 12px;
}

.c7 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c9 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  margin-right: 12px;
  align-items: center;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  justify-content: center;
}

.c12 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-items: center;
  border: solid 2px #7D4CDB;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  height: 24px;
  width: 24px;
  justify-content: center;
  border-radius: 4px;
}

.c15 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-items: center;
  border: solid 2px rgba(0, 0, 0, 0.15);
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  height: 24px;
  width: 24px;
  justify-content: center;
  border-radius: 4px;
}

.c16 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  margin-top: 48px;
  align-items: center;
  min-width: 0;
  min-height: 0;
  flex-direction: row;
  flex: 0 0 auto;
  justify-content: space-between;
}

.c14 {
  flex: 0 0 auto;
  align-self: stretch;
  height: 12px;
}

.c17 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  font: inherit;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  border: 2px solid #7D4CDB;
  border-radius: 18px;
  color: #444444;
  padding: 4px 22px;
  font-size: 18px;
  line-height: 24px;
  background-color: #7D4CDB;
  color: #f8f8f8;
  border-radius: 18px;
  transition-property: color,background-color,border-color,box-shadow;
  transition-duration: 0.1s;
  transition-timing-function: ease-in-out;
}

.c17:hover {
  box-shadow: 0px 0px 0px 2px #7D4CDB;
}

.c17:focus {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c17:focus >circle,
.c17:focus >ellipse,
.c17:focus >line,
.c17:focus >path,
.c17:focus >polygon,
.c17:focus >polyline,
.c17:focus >rect {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c17:focus ::-moz-focus-inner {
  border: 0;
}

.c17:focus:not(:focus-visible) {
  outline: none;
  box-shadow: none;
}

.c17:focus:not(:focus-visible) >circle,
.c17:focus:not(:focus-visible) >ellipse,
.c17:focus:not(:focus-visible) >line,
.c17:focus:not(:focus-visible) >path,
.c17:focus:not(:focus-visible) >polygon,
.c17:focus:not(:focus-visible) >polyline,
.c17:focus:not(:focus-visible) >rect {
  outline: none;
  box-shadow: none;
}

.c17:focus:not(:focus-visible) ::-moz-focus-inner {
  border: 0;
}

.c2 {
  max-width: 100%;
}

.c13 {
  box-sizing: border-box;
  stroke-width: 4px;
  stroke: #7D4CDB;
  width: 24px;
  height: 24px;
}

.c8 {
  display: flex;
  flex-direction: row;
  align-items: center;
  user-select: none;
  -webkit-user-select: none;
  width: fit-content;
  cursor: pointer;
}

.c8:hover input:not([disabled])+div,
.c8:hover input:not([disabled])+span {
  border-color: #000000;
}

.c11 {
  opacity: 0;
  -moz-appearance: none;
  width: 0;
  height: 0;
  margin: 0;
  cursor: pointer;
}

.c11:checked+span>span {
  left: calc( 48px - 24px );
  background: #7D4CDB;
}

.c10 {
  flex-shrink: 0;
}

.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

@media only screen and (max-width: 768px) {
  .c5 {
    margin-bottom: 6px;
  }
}

@media only screen and (max-width: 768px) {
  .c6 {
    border-bottom: solid 1px rgba(0, 0, 0, 0.33);
  }
}

@media only screen and (max-width: 768px) {
  .c6 {
    padding: 6px;
  }
}

@media only screen and (max-width: 768px) {
  .c9 {
    margin-right: 6px;
  }
}

@media only screen and (max-width: 768px) {
  .c12 {
    border: solid 2px #7D4CDB;
  }
}

@media only screen and (max-width: 768px) {
  .c15 {
    border: solid 2px rgba(0, 0, 0, 0.15);
  }
}

@media only screen and (max-width: 768px) {
  .c16 {
    margin-top: 24px;
  }
}

@media only screen and (max-width: 768px) {
  .c14 {
    height: 6px;
  }
}

<div
    class="c0"
  >
    <div
      class="c1"
      id="data"
    >
      <form
        class="c2"
      >
        <div
          class="c3"
        >
          <div
            class="c4"
          >
            <div
              class="c1"
            >
              <div
                class="c5 "
              >
                <label
                  class="textRecipe_size_medium"
                  for="data-name"
                  id="grommet-data-name__label"
                  style="margin: 6px 12px 6px 12px;"
                >
                  name
                </label>
                <div
                  class="c6 "
                >
                  <div
                    aria-labelledby="grommet-data-name__label"
                    class="c7 StyledCheckBoxGroup-sc-2nhc5d-0"
                    id="data-name"
                    role="group"
                  >
                    <label
                      class="c8"
                    >
                      <div
                        class="c9 c10"
                      >
                        <input
                          checked=""
                          class="c11"
                          type="checkbox"
                        />
                        <div
                          class="c12 "
                        >
                          <svg
                            class="c13"
                            preserveAspectRatio="xMidYMid meet"
                            viewBox="0 0 24 24"
                          >
                            <path
                              d="M6,11.3 L10.3,16 L18,6.2"
                              fill="none"
                            />
                          </svg>
                        </div>
                      </div>
                      <span>
                        a
                      </span>
                    </label>
                    <div
                      class="c14"
                    />
                    <label
                      class="c8"
                    >
                      <div
                        class="c9 c10"
                      >
                        <input
                          class="c11"
                          type="checkbox"
                        />
                        <div
                          class="c15 "
                        />
                      </div>
                      <span>
                        b
                      </span>
                    </label>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <footer
            class="c16"
          >
            <button
              class="c17"
              type="submit"
            >
              Apply filters
            </button>
          </footer>
        </div>
      </form>
    </div>
  </div>
</DocumentFragment>
`;
